<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="user"
            type="com.zj.hiapp.http.model.UserModel" />

        <variable
            name="coinInfo"
            type="com.zj.hiapp.http.model.CoinInfoModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:background="@drawable/shadow_circle"
            android:src="@drawable/ic_avatar_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxLength="10"
            android:singleLine="true"
            android:text="@{user.component10()??@string/action_login}"
            android:textColor="@color/color_000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login_desc"
            app:layout_constraintStart_toEndOf="@+id/user_avatar"
            app:layout_constraintTop_toTopOf="@+id/user_avatar"
            tools:text="@string/action_login" />

        <TextView
            android:id="@+id/login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_page_need_login_tips"
            android:textColor="@color/color_999"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_avatar"
            app:layout_constraintStart_toStartOf="@+id/tv_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <TextView
            android:id="@+id/tv_item_collection"
            bottomText="@{@string/grade}"
            topText="@{coinInfo.level}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:visibility="@{coinInfo==null ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_history"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_avatar"
            tools:text="@string/grade" />

        <TextView
            android:id="@+id/tv_item_history"
            bottomText="@{@string/rank}"
            topText="@{Integer.valueOf(coinInfo.rank??&quot;0&quot;)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="@{coinInfo==null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_collection"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_integral"
            app:layout_constraintStart_toEndOf="@+id/tv_item_collection"
            app:layout_constraintTop_toTopOf="@+id/tv_item_collection"
            tools:text="@string/rank" />

        <TextView
            android:id="@+id/tv_item_integral"
            bottomText="@{@string/integral}"
            topText="@{coinInfo.coinCount}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/integral_count"
            android:visibility="@{coinInfo==null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_item_history"
            app:layout_constraintTop_toTopOf="@+id/tv_item_history"
            tools:text="@string/integral" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/color_eee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_history" />

        <com.zj.common.ui.view.IconFontTextView
            android:id="@+id/item_notify"
            leftText="@{@string/if_notify}"
            rightText="@{@string/item_notify}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginStart="@dimen/start_value"
            android:gravity="center_vertical"
            android:textColor="@color/color_444"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:text="课程通知" />

        <com.zj.common.ui.view.IconFontTextView
            android:id="@+id/item_share"
            leftText="@{@string/if_share}"
            rightText="@{@string/item_share}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginStart="@dimen/start_value"
            android:gravity="center_vertical"
            android:textColor="@color/color_444"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_notify"
            tools:text="我的分享" />

        <com.zj.common.ui.view.IconFontTextView
            android:id="@+id/item_collection"
            leftText="@{@string/if_collection}"
            rightText="@{@string/item_collection}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginStart="@dimen/start_value"
            android:gravity="center_vertical"
            android:textColor="@color/color_444"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_share"
            tools:text="我的收藏" />

        <com.zj.common.ui.view.IconFontTextView
            android:id="@+id/item_history"
            leftText="@{@string/if_history}"
            rightText="@{@string/item_history}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginStart="@dimen/start_value"
            android:gravity="center_vertical"
            android:textColor="@color/color_444"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_collection"
            tools:text="阅读历史" />

        <com.zj.common.ui.view.IconFontTextView
            android:id="@+id/item_setting"
            leftText="@{@string/if_location}"
            rightText="@{@string/item_setting}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginStart="@dimen/start_value"
            android:gravity="center_vertical"
            android:text="@string/item_setting"
            android:textColor="@color/color_444"
            android:textSize="@dimen/item_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_history" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>